# learning_wasm

./: README.md
wasming/: Cargo.toml
wasming/src/: lib.rs
wasming/www/: index.js  package-lock.json  package.json
wexecute/: Cargo.toml
wexecute/src/: main.rs
