[package]
name = "wasming"
version = "0.1.0"
authors = ["Rodrigo Vaz <rodrigo.vaz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.50"

[dev-dependencies]
wasm-bindgen-test = "0.2"